web/styles: fix name align

--- a/src/web/assets/css/styles.css
+++ b/src/web/assets/css/styles.css
@@ -128,10 +128,15 @@ h3 {
 }
 
 #profile-info h1 {
+    display: flex;
+    align-items: center;
     height: 25px;
-    margin-bottom: 5px;
     font-size: 1.5em;
     font-weight: 500;
+    background-color: transparent;
+    border-radius: var(--border-radius);
+    padding: 2px;
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
 }
 
 #profile-info h2 {
@@ -143,6 +148,7 @@ h3 {
     font-size: 1em;
     background-color: var(--semi-transparent);
     border-radius: var(--border-radius);
+    border-top-left-radius: 0;
     padding: 2px;
     overflow-y: auto;
 }
