--- a/src/web/assets/css/themes/default.css
+++ b/src/web/assets/css/themes/default.css
@@ -25,7 +25,7 @@
     --button-filter: brightness(2);
     --button-font-color: #585858;
 
-    --border-radius: 0px;
+    --border-radius: 2px;
     --layout-padding: 10px;
     --border-size: 0px;
 }
